# stl_homeworks

./: .gitignore  CMakeLists.txt  main.cpp
homework_4_lib/: CMakeLists.txt
homework_4_lib/src/: Student.cpp  Student.h  extern_function.cpp  extern_function.h
homework_5_lib/: CMakeLists.txt
homework_5_lib/src/: extern_function.cpp  extern_function.h
homework_6_lib/: CMakeLists.txt
homework_6_lib/src/: extern_function.cpp  extern_function.h
homework_7_lib/: CMakeLists.txt
homework_7_lib/src/: extern_function.cpp  extern_function.h
include/: so.h
